# zucchini

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
examples/: example.py
tests/: test_zucchini.py
zucchini/: __init__.py  decorators.py  queue.py  worker.py
